practice/6.network policies/1.deny_all.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: base
spec:
  podSelector:
    matchLabels: {}
