practice/6.network policies/2.allow_pod.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-bd
  namespace: base
spec:
  podSelector:
    matchLabels:
      run: base
  ingress:
  - from:
      - podSelector:
          matchLabels:
            run: access
