practice/6.network policies/3.allow_port_pod.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-bd
  namespace: base
spec:
  podSelector:
    matchLabels:
      run: base
  ingress:
  - ports:
     - port: 22
       protocol: TCP
    from:
      - podSelector:
          matchLabels:
            run: access
