practice/6.network policies/5.ok.egress_deny.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-prod
  namespace: prod
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels: {}
  egress:
  - to:
    - podSelector:
       matchLabels: {}
      namespaceSelector:
       matchLabels: {}
    - ipBlock:
       cidr: 8.8.8.8/32
    - ipBlock:
       cidr: 1.1.1.1/32
