practice/6.network policies/6.egress_deny_53.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-prod
  namespace: prod
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
       matchLabels: {}
      namespaceSelector:
       matchLabels: {}
  - to:
    - ipBlock:
       cidr: 8.8.8.8/32
    - ipBlock:
       cidr: 1.1.1.1/32
    ports:
      - port: 53
        protocol: UDP
